kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: contoso-website
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: contoso.c089d69736bd4a9dbeb9.eastus2.aksapp.io
      http:
        paths:
          - backend:
              serviceName: contoso-website
              servicePort: http
            path: /
